--- a/web.env.example
+++ b/web.env.example
@@ -1,4 +1,4 @@
 SHORTLINK_DB_HOST=db
 SHORTLINK_DB_USER=shortlink_user
 SHORTLINK_DB_NAME=shortlink_db
-SHORTLINK_DB_PASSWORD=****
+SHORTLINK_DB_PASSWORD=shortlink_db_pass
